--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.flyway.user=${POSTGRE_USERNAME}
 spring.flyway.password=${POSTGRE_PASSWORD}
 spring.flyway.schemas=public
 spring.flyway.url=${POSTGRE_URL}
+
+spring.mail.host=${MAIL_SERVICE_HOST}
+spring.mail.port=${MAIL_SERVICE_PORT}
+spring.mail.username=${MAIL_SERVICE_USERNAME}
+spring.mail.password=${MAIL_SERVICE_PASSWORD}
+spring.mail.properties.mail.smtp.auth=${MAIL_SERVICE_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SERVICE_TLS}
+
+mail.from=${MAIL_FROM}
