--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: olv-mat
+    container_name: olv-mat
     ports:
       - "8080:8080"
     depends_on:
