--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+hostport=${HOST_PORT}
+
 spring.application.name=OLVmat
 spring.jpa.hibernate.ddl-auto=none
 
@@ -24,3 +26,5 @@ spring.mail.properties.mail.smtp.auth=${MAIL_SERVICE_AUTH}
 spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SERVICE_TLS}
 
 mail.from=${MAIL_FROM}
+super.admin.email=${SUPER_ADMIN_EMAIL}
+
